<!--
    Copyright 2014 Cyril Vlaminck

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>
    <string name="app_name">Is My Minecraft Server Online</string>

    <string name="homeactivity_miAdd_title">Add</string>
    <string name="homeactivity_miRefresh_title">Refresh</string>
    <string name="homeactivity_miPreferences_title">Preferences</string>
    <string name="homeactivity_miAbout_title">About</string>

    <string name="serverlistemptyview_lblEmpty">You are not observing any Minecraft server.\r\nPress on the <b>\'+\'</b> to start observing your first one.</string>

    <string name="addserveractivity_label">Add a server</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="addserveractivity_txtName_error">You must enter a name. Must not be empty or contains only spaces.</string>
    <string name="addserveractivity_txtName_hint">My minecraft server</string>
    <string name="addserveractivity_txtHost_errorEmpty">You must enter an host. Must not be empty or contains only spaces.</string>
    <string name="addserveractivity_txtHost_hint">my.server.com</string>
    <string name="addserveractivity_txtPort_error">Port must be a decimal number between 1 and 65535.</string>

    <string name="userpreferenceactivity_label">Preferences</string>
    <string name="userpreferences_refreshCategory_title">Refresh</string>
    <string name="userpreferences_notificationsCategory_title">Notifications</string>
    <string name="userpreferences_timeInMSBetweenChecks_key">period</string>
    <string name="userpreferences_timeInMSBeetweenChecks_title">Time between refresh</string>
    <string name="userpreferences_refreshAutomaticallyInBackground_key">auto</string>
    <string name="userpreferences_refreshAutomaticallyInBackground_title">Automatic refresh</string>
    <string name="userpreferences_notifyWhenServerGoesOffline_key">notify</string>
    <string name="userpreferences_notifyWhenServerGoesOffline_title">Notify when a server goes offline</string>
    <string name="userpreferences_pushNotificationsToWearableDevices_key">wearable</string>
    <string name="userpreferences_pushNotificationsToWearableDevices_title">Notify on wearable devices</string>
    <string name="userspreferences_pushNotificationsToWearableDevices_summary">When activated, notifications will be pushed to your wearable devices.</string>

    <string name="timeformatter_seconds">seconds</string>
    <string name="timeformatter_minutes">minutes</string>
    <string name="timeformatter_hours">hours</string>
    <string name="timeformatter_days">days</string>
    <string name="timeformatter_second">second</string>
    <string name="timeformatter_minute">minute</string>
    <string name="timeformatter_hour">hour</string>
    <string name="timeformatter_day">day</string>
    <string name="timeformatter_seconds_small">s</string>
    <string name="timeformatter_minutes_small">mn</string>
    <string name="timeformatter_hours_small">h</string>
    <string name="timeformatter_days_small">d</string>

    <string name="offlineServerNotification_oneServer_contentText">Your server is offline since %s</string>
    <string name="offlineServerNotification_multipleServers_contentTitle">%d servers offline</string>
    <string name="offlineServerNotification_multipleServers_contentText">\'%1$s\', and %2$d more are offline since at least %3$s</string>
    <string name="serverviewheaderview_status_online">Online</string>
    <string name="serverlistheaderview_status_offline">Offline</string>
    <string name="serverlistitemview_lblOfflineSince">Offline since</string>
    <string name="offlineServerNotification_oneServer_ticker">\'%s\' has gone offline</string>
    <string name="offlineServerNotification_multipleServers_ticker">%d servers have gone offline</string>


</resources>
